FileDescriptor test